# the-tree-project

./: .gitignore  README.md  hie.yaml  stack.yaml
tree/: CHANGELOG.md  tree.cabal
tree-cli/: CHANGELOG.md  README.md  tree-cli.cabal
tree-view/: CHANGELOG.md  tree-view.cabal
tree-view/src/: Main.hs  TreeView.hs
tree-view/src/TreeView/: Default.hs  TreeVisualization.hs
tree/src/: Tree.hs
tree/src/Tree/Control/: Transformation.hs
tree/src/Tree/Data/: Analysis.hs  Definition.hs  Utils.hs
tree/src/Tree/Data/Analysis/: DepthTree.hs
tree/src/Tree/Data/Definition/: DepthTree.hs  Treeable.hs
tree/src/Tree/Data/Generation/: DepthTree.hs
