name:                tree
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/tree#readme
license:             BSD3
license-file:        LICENSE
author:              Samuel Glogger
maintainer:          example@example.com
copyright:           2022 Samuel Glogger
category:            Library
build-type:          Simple
extra-source-files:  README.md
                     CHANGELOG.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Tree
                      ,Tree.Data.Definition
                      ,Tree.Data.Definition.Treeable
                      ,Tree.Control.Transformation
  other-modules:       Tree.Data.Utils
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints

source-repository head
  type:     git
  location: https://github.com/githubuser/tree
